--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,41 @@
 #map {
-    /* float: left; */
     width: 100%; 
-    height: 530px;
+    height: 100vh;
+    margin-left: 0px;
+    margin-right: 0px;
     padding-bottom: 30px;
     float: left;
 }
 
-main.container{
-    clear: right;
-    width: 45%
+.container {
+    max-width: 100%;
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+form {
+    margin: 0 140px;
 }
 
 .form-group {
-    width: 40%;
+    width: 100%;
+}
+
+#search {
+    margin: 5vh auto;
+}
+
+.card {
+    margin-top: 100px;
+}
+
+th {
+    width: 44%;
+}
+
+th:last-child {
+    width: 44%;
 }
