--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,15 +5,22 @@
     margin-right: 0px;
     padding-bottom: 30px;
     float: left;
+    /* z-index: -1; */
 }
 
 .container {
     max-width: 100%;
+    font-family: 'Work Sans', sans-serif;
 }
 
 h2 {
     text-align: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
+}
+ 
+p {
+    text-align: center;
+    margin-bottom: 50px;
 }
 
 form {
@@ -22,10 +29,17 @@ form {
 
 .form-group {
     width: 100%;
+    padding-bottom: 12px;
+    
+}
+
+.form-control {
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 #search {
-    margin: 5vh auto;
+    /* margin: 5vh auto; */
+    padding-top: 10vh;
 }
 
 .card {
