set media query breakpoints

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 #map {
-    width: 100%; 
     height: 100vh;
     margin-left: 0px;
     margin-right: 0px;
@@ -73,21 +72,36 @@ th:last-child {
     float: right;
 }
 
-/*  */
-@media screen and (max-width: 980px) {
-}
-/* Tablets/iPads */
 
-@media screen and (max-width: 768px) {
-    #map {
-        width: 50vh;
-    }
-
-    #search {
-   width: 50vh;      
+/* // Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
+    /* #map {
+        height: 50vh;
+    } */
+    form {
+        margin: 0 30px;
     }
 }
 
-/*  */
-@media screen and (max-width: 640px) {
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+    form {
+        margin: 0 30px;
+    }
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+    form {
+        margin: 0 50px;
+    }
+}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+   
+    form {
+        margin: 0 70px;
+    }
+    
 }
