--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,11 +75,36 @@ th:last-child {
 
 /* // Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { 
-    /* #map {
-        height: 50vh;
-    } */
+    #map {
+        height: 60vh;
+    }
+
     form {
         margin: 0 30px;
+    }
+
+    #search {
+        padding-top: 2vh;
+    }
+
+    h2 {
+        margin-bottom: 0;
+    }
+
+    p {
+        margin-bottom: 30px;
+    }
+
+    form {
+        margin: 0 30px;
+    }
+
+    .form-group {
+        text-align: center;
+    }
+
+    input {
+        text-align: center;
     }
 }
 
@@ -87,6 +112,11 @@ th:last-child {
 @media (min-width: 768px) { 
     form {
         margin: 0 30px;
+    }
+
+    .card {
+        margin-left: 30px;
+        margin-right: 30px;
     }
 }
 
@@ -103,5 +133,5 @@ th:last-child {
     form {
         margin: 0 70px;
     }
-    
+
 }
